:bug: certif: no double scrollbar on session
If an element renders outside the app main content it will be clipped without creating a scrollbar

--- a/certif/app/styles/pages/authenticated.scss
+++ b/certif/app/styles/pages/authenticated.scss
@@ -67,7 +67,7 @@
 .main-content {
   display: flex;
   flex-direction: column;
-  overflow: auto;
+  overflow: hidden;
 
   &__topbar {
     background-color: $pix-neutral-0;
